--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
 
   <div class="footer">
   	<div  id="copyright">© Copyright 2015</div>
+  		<div class="page-scroll">
+            <a href="#/home" class="btn btn-circle">
+                <i class="fa fa-angle-double-up pulse animated"></i>
+            </a>
+        </div>
   </div>
   	</div>
 </body>
