--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+
 @import "bootstrap";
 
 #ha{
@@ -95,9 +96,17 @@
 
 /*application footer*/
 #copyright{
-	position:absolute;
-   bottom:0;
-   left: 42%;
+  display: block;
+  text-align:center;
+  background-color:#006dcc;
+  color:#ffffff;
+}
+.footer{
+  display: block;
+  text-align:center;
+  background-color:#006dcc;
+  height:120px;
+  color:#ffffff;
 }
 /*end of application footer*/
 
@@ -251,30 +260,29 @@
   height: 50px;
   margin-top: 15px;
   padding: 7px 16px;
-  border: 2px solid #0000CD;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   font-size: 40px;
-  color: #0000CD;
+  color: #ffffff;
   background: 0 0;
   transition: background .3s ease-in-out;
   position:absolute;
-  top:300px;
-  left: 520px;
+  botom:0;
+  left: 620px;
 }
 .btn-circle:hover {
   width: 50px;
   height: 50px;
   margin-top: 15px;
   padding: 7px 16px;
-  border: 2px solid #0000CD;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   font-size: 40px;
-  color: #0000CD;
+  color: #ffffff;
   background: 0 0;
   transition: background .3s ease-in-out;
-  position:absolute;
-  top:300px;
-  left: 520px;
+  botom:0;
+  left: 620px;
 }
 .fa-angle-double-down:before {
   content: "\f103";
@@ -325,7 +333,7 @@ a {
 /*end of disign for circle animated button*/
 
 /*design for introduction section*/
-.intro {
+/*.intro {
   width: 100%;
   height: 100%;
   position: relative;
@@ -339,7 +347,7 @@ a {
 }
 .intro .page-scroll {
   text-align: center;
-}
+}*/
 /*end of design for introduction section*/
 
 /*design for navigation bar*/
@@ -425,8 +433,9 @@ h1.naslov1{
 }
 #main-title{
   position:absolute;
-  top:200px;
-  left:400px;
+  top:60px;
+  left:202px;
+  color:#666;
 }
 /*end of design for home title*/
 
