--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -279,4 +279,13 @@ h2{
     </div>
     <!--feedback form-->
 
+    <!--Footer-->
+    <div class="footer">
+            <div class="page-scroll">
+                <a href="#/home" class="btn btn-circle">
+                    <i class="fa fa-angle-double-up pulse animated"></i>
+                </a>
+            </div>
+    </div>
+    <!--/.Footer-->
 </body>
