--- a/app/assets/javascripts/templates/user_management.html.erb
+++ b/app/assets/javascripts/templates/user_management.html.erb
@@ -29,10 +29,10 @@
         <td> {{user.job}}</td>
         <td>
           <div class="actions">       <!-- TBD dodati metodu da otvara formu za editovanje usera!-->
-            <button class="btn btn-primary btn-usr-mng" ng-click="openEditUser()"  ng-disabled="myForm.$invalid">Izmijeni</button>
+            <button class="btn btn-primary btn-usr-mng" ng-click="editUser()"  ng-disabled="myForm.$invalid">Izmijeni</button>
           </div>
-          <div class="actions" ng-controller="DeleteUsersControler">       <!-- TBD dodati pitanje da li zelimo da se izbrise user ili ne!-->
-            <button class="btn btn-primary btn-usr-mng" ng-click="deleteUser()"  ng-disabled="myForm.$invalid">Obriši</button>
+          <div class="actions" >
+            <button class="btn btn-primary btn-usr-mng" ng-click="deleteUser(user.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
           </div>
         </td>
       </tr>
