Nije htjelo da se komita, pa rucno dodao

--- a/app/assets/javascripts/templates/user_management.html.erb
+++ b/app/assets/javascripts/templates/user_management.html.erb
@@ -7,7 +7,7 @@
   </select>
   Pretraga: <input ng-model="query" class="form-control">
   Dodavanje novog usera: 
-  <button class="btn btn-primary" ng-click="registerUserWithRole()"  ng-disabled="myForm.$invalid">Dodaj usera</button>
+  <button class="btn btn-primary" ng-controller="RegistrationUserByManagerController" ng-click="registerUserWithRole()"  ng-disabled="myForm.$invalid">Dodaj usera</button>
 </div>
 
 </br></br>
