--- a/app/assets/javascripts/templates/add_question.html.erb
+++ b/app/assets/javascripts/templates/add_question.html.erb
@@ -1,4 +1,4 @@
-<div classs="container" style="background-color:grey;"   ng-controller="QuestionsController">
+<div classs="container"  ng-controller="QuestionsController">
   <div class="row">
        <div class="col-lg-4">
        </div>
