--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -157,7 +157,11 @@ h2{
                         <div class="section-heading">
                         <h2>{{ 'AHEAD' | translate }}</h2>
                         <i class="fa fa-2x fa-angle-down"></i>
-
+                         </br>  
+                            <div style="text-align:center;" ng-controller="QuestionsController"> Otvorite stranicu sa već postavljenim pitanjima 
+                                <a href ng-click="openQuestions()">OVDJE</a>. 
+                            </div>
+                         </br>
                         </div>
                         </div>
                     </div>
