modifying category panel

--- a/app/assets/javascripts/templates/new_category.html.erb
+++ b/app/assets/javascripts/templates/new_category.html.erb
@@ -27,7 +27,7 @@
 
 				<!-- submit button-->
 				<div class="actions">
-				  <button class="btn btn-lg btn-primary btn-block" ng-click="changePass()"  ng-disabled="myForm.$invalid">Kreiraj</button>
+				  <button class="btn btn-lg btn-primary btn-block" ng-click="createCategoryC()"  ng-disabled="myForm.$invalid">Kreiraj</button>
 				</div>
 			  </form>
 			</div>
