--- a/app/assets/javascripts/templates/category_admin.html.erb
+++ b/app/assets/javascripts/templates/category_admin.html.erb
@@ -4,13 +4,13 @@
   <select ng-model="orderProp" class="form-control">
     <option value="name">Imenima</option>
   </select>
-  Pretraga: <input ng-model="query" class="form-control">
+  Pretraga: <input ng-model="query" class="form-control"> <br><br>
   Dodavanje nove kategorije: 
-  <button class="btn btn-primary" ng-controller="CreateCategoryController" ng-click="createCategoryC()"  ng-disabled="myForm.$invalid">Dodaj kategoriju</button>
+  <button class="btn btn-primary" ng-controller="CreateCategoryControllerByAdmin" ng-click="createCategoryByAdmin()"  ng-disabled="myForm.$invalid">Dodaj kategoriju</button>
 </div>
 
 </br></br>
-<table class="table table-hover table-condensed tabela" ng-controller="SearchCategoriesControler">
+<table class="table table-hover table-condensed tabela1" ng-controller="SearchCategoriesControler">
     <thead>
         <tr>s
             <th>Naziv</th>
@@ -26,7 +26,7 @@
             <button class="btn btn-primary btn-usr-mng" ng-click="updateUser(stock.id, $index)"  ng-disabled="myForm.$invalid">Izmijeni</button>
           </div>
           <div class="actions" >
-            <button class="btn btn-primary btn-usr-mng" ng-click="deleteUser(user.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
+            <button class="btn btn-primary btn-usr-mng" ng-click="deleteCategory(category.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
           </div>
         </td>
       </tr>
