--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -93,5 +93,19 @@
                     </div>
                 </div>
             </a>
-            
+           <a href class="normal" ng-click="openRoleManagement()">
+                <div class="col-sm-3 col-md-3">
+                    <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                    <div class="service-box">
+                        <div class="service-icon">
+                            <img src="/assets/role_icon.jpg" alt="" height="100" width="100" align="middle">
+                        </div>
+                        <div class="service-desc">
+                            <h5>{{ 'USRROLE' | translate }}</h5>
+                            <p>{{ 'USRROLED' | translate }}</p>
+                            </div>
+                    </div>
+                    </div>
+                </div>
+            </a> 
         </div>
