--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -705,6 +705,10 @@ img {
   width:60%;
   margin-left:250px;
 }
+.tabela1{
+  width:40%;
+  margin-left:180px;
+}
 /*end of design for feedback_admin*/
 .btn-usr-mng{
   width:100px;
