deleting and adding a role

--- a/app/assets/javascripts/templates/role_admin.html.erb
+++ b/app/assets/javascripts/templates/role_admin.html.erb
@@ -2,8 +2,8 @@
 <div class="pretraga">
   Sortiraj po:
   <select ng-model="orderProp" class="form-control">
-    <option value="name">Ime</option>
-    <option value="name">Id</option>
+    <option value="name">Naziv</option>
+    <option value="name">Opis</option>
   </select>
   Pretraga: <input ng-model="query" class="form-control"> <br><br>
   Dodavanje nove role: 
@@ -11,3 +11,24 @@
 </div>
 
 </br></br>
+<table class="table table-hover table-condensed tabela" ng-controller="SearchRoleControler">
+    <thead>
+        <tr>s
+            <th>Naziv</th>
+            <th>Opis</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="role in roles | filter:query | orderBy:orderProp">
+        <td> {{role.name}}</td>
+        <td> {{role.description}}</td>
+        <td>
+          <div class="actions"> 
+            <button class="btn btn-primary btn-usr-mng" ng-click="updateUser(stock.id, $index)"  ng-disabled="myForm.$invalid">Izmijeni</button>
+          </div>
+          <div class="actions" >
+            <button class="btn btn-primary btn-usr-mng" ng-click="deleteRole(role.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
+          </div>
+        </td>
+      </tr>
+</table>
