directives start, home page background

--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -58,7 +58,8 @@ h2{
 } 
 </style>
 </head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom" class="bcgnone">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+  <div class="bcgwhite" style="height:1000px">
     <div  ng-controller="HomeController">
     <!-- Navigation bar -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -147,6 +148,12 @@ h2{
         </div>
     </div>
     <!-- /.image slider-->
+
+    <div my-dom-directive>Click Me!</div>
+
+
+   <!--<div rating score="song.score" max="5" class="pull-left"></div>-->
+
 
     <!--advice form-->
     <div class="heading-contact-title">
@@ -292,4 +299,5 @@ h2{
             </div>
     </div>
     <!--/.Footer-->
+    </div>
 </body>
