Angular UI bootstrap added.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 
 @import "bootstrap";
-
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 #ha{
   background-image: none !important;
 }
